GAS重构13 雷龙卷技能

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -212,6 +212,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius.RangeHeight",NewName="/Script/ProjectGASRPG.MageGA_AOE.RangeHalfHeight")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius",NewName="/Script/ProjectGASRPG.MageGA_AOE")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius",NewName="/Script/ProjectGASRPG.MageGA_AOE")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionRadialForce.ApplyRootMotionRadialForce",NewName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionRadialForce.ApplyTargetRootMotionRadialForce")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
