--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -26,4 +26,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Teleport",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
++GameplayTagList=(Tag="GameplayCue.ThunderTronado",DevComment="")
 
