GAS重构15 完善攻击检测，支持多Socket，GameplayEvent

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -105,14 +105,14 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypes",NewName="/Script/ProjectGASRPG.MageGA_Damage.DamageTypeTag_To_AbilityDamage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageType_To_AbilityDamage",NewName="/Script/ProjectGASRPG.MageGA_Damage.DamageTypeTag_To_AbilityDamage")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocation",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponAttachSocket")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.BloodEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetBloodEffect",NewName="/Script/ProjectGASRPG.ICombatInterface.GetHitEffect")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackedEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback")
@@ -159,7 +159,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback",NewName="/Script/ProjectGASRPG.MageGA_Beam.OnTargetDiedCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bIsElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ClientEffectAppliedToSelfCallback",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.EffectAppliedToSelfCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ServerLearnSkill",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.LearnSkill")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeathCallback",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OwnerDeathCallback")
@@ -213,6 +213,18 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius",NewName="/Script/ProjectGASRPG.MageGA_AOE")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius",NewName="/Script/ProjectGASRPG.MageGA_AOE")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionRadialForce.ApplyRootMotionRadialForce",NewName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionRadialForce.ApplyTargetRootMotionRadialForce")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.TracePointsLocation",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackDetectionPointsLocation")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.TracePointsLocation",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackDetectionPointsLocation")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.IsAttacked",NewName="/Script/ProjectGASRPG.ICombatInterface.IsAttackDetected")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.SetIsAttacked",NewName="/Script/ProjectGASRPG.ICombatInterface.SetIsAttackDetected")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.IsAttackDetected",NewName="/Script/ProjectGASRPG.ICombatInterface.IsDamageDetected")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.SetIsAttackDetected",NewName="/Script/ProjectGASRPG.ICombatInterface.SetIsDamageDetected")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByTag",NewName="/Script/ProjectGASRPG.ICombatInterface.GetAttackDetectionSocketLocationByTag")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.MontageTag",NewName="/Script/ProjectGASRPG.TaggedMontage.MontageEventTag")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
