--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,12 +13,17 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Mage.Move.Teleport",DevComment="")
 +GameplayTagList=(Tag="Buff.RestoreVitality",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Move.Teleport",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Attack1",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Attack2",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Fireball",DevComment="发射火球")
 +GameplayTagList=(Tag="Event.Montage.IceBlast",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Laser",DevComment="")
++GameplayTagList=(Tag="Event.Montage.LeftHand",DevComment="")
++GameplayTagList=(Tag="Event.Montage.RightHand",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Test",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Test2",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.ThunderTronado",DevComment="雷暴技能蒙太奇")
++GameplayTagList=(Tag="Event.Montage.Trail",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.CastingLoop",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ElectricStun",DevComment="")
