GAS库存系统2 监听拾取Item

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,7 +226,28 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.MontageTag",NewName="/Script/ProjectGASRPG.TaggedMontage.MontageEventTag")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.Item",NewName="/Script/ProjectGASRPG.MageItem")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemWidget",NewName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SetItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitItemInfo")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SetItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitItemInfo")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.InitItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitMageItemInfo")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.InitItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitMageItemInfo")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.BroadcastDelegateOnPickUp",NewName="/Script/ProjectGASRPG.MageItem.SendMageItemInfoOnPickUp")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.BroadcastDelegateOnPickUp",NewName="/Script/ProjectGASRPG.MageItem.SendMageItemInfoOnPickUp")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SendMageItemInfoOnPickUp",NewName="/Script/ProjectGASRPG.MageItem.BroadcastMageItemInfo")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SendMageItemInfoOnPickUp",NewName="/Script/ProjectGASRPG.MageItem.BroadcastMageItemInfo")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.AMageItem",NewName="/Script/ProjectGASRPG.MageWidgetController.MageItem")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_WaitPickUpItem",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_PickUpItem",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_WaitItemPickedUp",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp.WaitForItemPickedUp",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp.ListenForItemPickedUp")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp.OnPickUpItem",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp.OnItemPickedUp")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemMesh",NewName="/Script/ProjectGASRPG.MageItem.MeshComponent")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemMesh",NewName="/Script/ProjectGASRPG.MageItem.MeshComponent")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.GetMageItemInfo",NewName="/Script/ProjectGASRPG.MageItem.GetDefaultMageItemInfo")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
