--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -39,4 +39,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ThunderTronado",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon",DevComment="")
++GameplayTagList=(Tag="Item.Weapon.Staff1",DevComment="")
++GameplayTagList=(Tag="Item.Weapon.Staff2",DevComment="")
 
