GAS库存系统3 拾取排序

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -248,6 +248,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemMesh",NewName="/Script/ProjectGASRPG.MageItem.MeshComponent")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemMesh",NewName="/Script/ProjectGASRPG.MageItem.MeshComponent")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.GetMageItemInfo",NewName="/Script/ProjectGASRPG.MageItem.GetDefaultMageItemInfo")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_InventoryItemChanged.ListenForItemPickedUp",NewName="/Script/ProjectGASRPG.AsyncTask_InventoryItemChanged.ListenForInventoryItemChanged")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
