--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -41,4 +41,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Item.Weapon",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon.Staff1",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon.Staff2",DevComment="")
++GameplayTagList=(Tag="Item.Weapon.Staff3",DevComment="")
 
