--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -250,6 +250,10 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.GetMageItemInfo",NewName="/Script/ProjectGASRPG.MageItem.GetDefaultMageItemInfo")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_InventoryItemChanged.ListenForItemPickedUp",NewName="/Script/ProjectGASRPG.AsyncTask_InventoryItemChanged.ListenForInventoryItemChanged")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.ItemNumericData.MaxStackNum",NewName="/Script/ProjectGASRPG.ItemNumericData.MaxStackSize")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.InteractionData.CurrentInteractable",NewName="/Script/ProjectGASRPG.InteractionData.CurrentInteractableActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.InventoryComponent.TargetInteractable",NewName="/Script/ProjectGASRPG.InventoryComponent.TargetInteractableObject")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.InventoryUserWidget",NewName="/Script/ProjectGASRPG.InventoryPanel")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.InventorySlotUserWidget",NewName="/Script/ProjectGASRPG.InventorySlot")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
