GAS库存系统6 提示文本行

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -254,6 +254,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.InventoryComponent.TargetInteractable",NewName="/Script/ProjectGASRPG.InventoryComponent.TargetInteractableObject")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.InventoryUserWidget",NewName="/Script/ProjectGASRPG.InventoryPanel")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.InventorySlotUserWidget",NewName="/Script/ProjectGASRPG.InventorySlot")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnInteractableDataChangedDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnInteractableDataChanged")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
