--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -38,6 +38,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Teleport",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ThunderTronado",DevComment="")
++GameplayTagList=(Tag="Item.Test.Item1",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon.Staff1",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon.Staff2",DevComment="")
