--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,7 +226,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.MontageEventTag_To_AttackDetectionSockets")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.MontageTag",NewName="/Script/ProjectGASRPG.TaggedMontage.MontageEventTag")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.Item",NewName="/Script/ProjectGASRPG.MageItem")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SetItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitItemInfo")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SetItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitItemInfo")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.InitItemInfo",NewName="/Script/ProjectGASRPG.MageItem.InitMageItemInfo")
@@ -236,10 +236,10 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SendMageItemInfoOnPickUp",NewName="/Script/ProjectGASRPG.MageItem.BroadcastMageItemInfo")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageItem.SendMageItemInfoOnPickUp",NewName="/Script/ProjectGASRPG.MageItem.BroadcastMageItemInfo")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.AMageItem",NewName="/Script/ProjectGASRPG.MageWidgetController.MageItem")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.ItemPickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_WaitPickUpItem",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_PickUpItem",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_WaitItemPickedUp",NewName="/Script/ProjectGASRPG.AsyncTask_ItemPickedUp")
@@ -255,6 +255,14 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.InventoryUserWidget",NewName="/Script/ProjectGASRPG.InventoryPanel")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.InventorySlotUserWidget",NewName="/Script/ProjectGASRPG.InventorySlot")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnInteractableDataChangedDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnInteractableDataChanged")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.PickUpTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.InteractTipsWidget",NewName="/Script/ProjectGASRPG.MageItem.InteractKeyWidget")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.PickUpItem",NewName="/Script/ProjectGASRPG.PickupItem")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageItem.InstanceInteractableData",NewName="/Script/ProjectGASRPG.MageItem.InteractableData")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.IPlayerInterface.GetInteractionInterface",NewName="/Script/ProjectGASRPG.IPlayerInterface.GetInteractionComponent")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.InventoryComponent.RemoveMultipleItem",NewName="/Script/ProjectGASRPG.InventoryComponent.RemoveAmountOfItem")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.InventoryComponent.RemoveSingleItem",NewName="/Script/ProjectGASRPG.InventoryComponent.RemoveSingleInstanceOfItem")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.InventoryComponent.AddItem",NewName="/Script/ProjectGASRPG.InventoryComponent.HandleAddItem")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
