--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -39,6 +39,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ThunderTronado",DevComment="")
 +GameplayTagList=(Tag="Item.Test.Item1",DevComment="")
++GameplayTagList=(Tag="Item.Test.Item2",DevComment="")
++GameplayTagList=(Tag="Item.Test.Item3",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon.Staff1",DevComment="")
 +GameplayTagList=(Tag="Item.Weapon.Staff2",DevComment="")
